--- a/Magic Pen.ipynb
+++ b/Magic Pen.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Importing Necessary projects\n",
+    "#Importing Necessary Libraries\n",
     "import cv2\n",
     "import numpy as np"
    ]
