--- a/Magic Pen.ipynb
+++ b/Magic Pen.ipynb
@@ -73,9 +73,9 @@
     "        bk = cv2.bitwise_or(white_background, white_background, mask=temp_gray_inv) #3 channeled temp_gray_inv\n",
     "        fg = cv2.bitwise_or(temp, temp, mask=temp_gray_inv) #Red foreground and black background\n",
     "        Result = cv2.bitwise_or(frame,fg)\n",
-    "#         cv2.imshow('Main',frame)\n",
-    "#         cv2.imshow('Mask',mask)\n",
-    "#         cv2.imshow('Temp',temp)\n",
+    "#         cv2.imshow('Main',frame)\n",  - frame window shows only the tracking of the object of interest.
+    "#         cv2.imshow('Mask',mask)\n",   - Mask window shows contoured grayscale version of the object of interest
+    "#         cv2.imshow('Temp',temp)\n",    
     "#         cv2.imshow('Tempgrayinv',temp_gray_inv)\n",
     "        cv2.imshow('Result',Result)\n",
     "        #To end the program\n",
