--- a/Magic Pen.ipynb
+++ b/Magic Pen.ipynb
@@ -72,8 +72,8 @@
     "        white_background = np.full(temp.shape, 255, dtype=np.uint8)  #Plain white background\n",
     "        bk = cv2.bitwise_or(white_background, white_background, mask=temp_gray_inv) #3 channeled temp_gray_inv\n",
     "        fg = cv2.bitwise_or(temp, temp, mask=temp_gray_inv) #Red foreground and black background\n",
-    "        Result = cv2.bitwise_or(frame,fg)\n",
-    "#         cv2.imshow('Main',frame)\n",
+    "        Result = cv2.bitwise_or(frame,fg)\n",   
+    "#         cv2.imshow('Main',frame)\n",  Frame window shows only the tracking of the object of interest
     "#         cv2.imshow('Mask',mask)\n",
     "#         cv2.imshow('Temp',temp)\n",
     "#         cv2.imshow('Tempgrayinv',temp_gray_inv)\n",
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Image Moment is a particular weighted average of image pixel intensities, with the help of which we can find some specific properties of an image, like radius, area, centroid etc. To find the centroid of the image, we generally convert it to binary format and then find its center."
+    ""
    ]
   }
  ],
