--- a/Magic Pen.ipynb
+++ b/Magic Pen.ipynb
@@ -73,7 +73,7 @@
     "        bk = cv2.bitwise_or(white_background, white_background, mask=temp_gray_inv) #3 channeled temp_gray_inv\n",
     "        fg = cv2.bitwise_or(temp, temp, mask=temp_gray_inv) #Red foreground and black background\n",
     "        Result = cv2.bitwise_or(frame,fg)\n",
-    "#         cv2.imshow('Main',frame)\n",
+    "#         cv2.imshow('Main',frame)\n",   Frame window only shows the tracking of the object !
     "#         cv2.imshow('Mask',mask)\n",
     "#         cv2.imshow('Temp',temp)\n",
     "#         cv2.imshow('Tempgrayinv',temp_gray_inv)\n",
